src/main/metadata/objects/Re_Payment_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Composite_Rental_Identifier__c</fullName>
        <formula>FS_Contract__r.Borrower__r.BPID__c+"-"+ FS_Contract__r.Contract_ID__c+"-"+ Rental_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Composite Rental Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FID_Amount__c</fullName>
        <label>Rental Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FS_Contract__c</fullName>
        <label>FS Contract</label>
        <referenceTo>FS_Contract__c</referenceTo>
        <relationshipName>Re_Payment_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Gross_Amount_Paid__c</fullName>
        <label>Gross Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_Amount__c</fullName>
        <label>Insurance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_Amount__c</fullName>
        <label>Interest Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Rental_Amount__c</fullName>
        <label>Net Rental Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Principal_Amount__c</fullName>
        <label>Principal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Principle_Balance_Oustanding__c</fullName>
        <label>Principle Balance Oustanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Registration_Amount__c</fullName>
        <label>Registration Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rental_Amount_Gross__c</fullName>
        <label>Rental Amount (Gross)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rental_ID__c</fullName>
        <label>Rental No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sundry_charges__c</fullName>
        <label>Sundry charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VAT_on_Rental__c</fullName>
        <label>VAT on Rental</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Rental Plan</label>
    <nameField>
        <displayFormat>RPP-{000000}</displayFormat>
        <label>Rental Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rental Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>